<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="sofascore.pokedex.ui.fragment.SearchFragment"
        android:label="@string/Search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="sofascore.pokedex.ui.fragment.FavoritesFragment"
        android:label="@string/Favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="sofascore.pokedex.ui.fragment.SettingsFragment"
        android:label="@string/Settings"
        tools:layout="@layout/fragment_settings" />
</navigation>